fix tooltip/popover sometimes not showing

--- a/src/components/navigation/GlobalNavigation/global-navigation.css
+++ b/src/components/navigation/GlobalNavigation/global-navigation.css
@@ -7,7 +7,7 @@
     border-radius: var(--border-radius);
     cursor: pointer;
 
-    &:hover {
+    &:hover, :focus, :active {
         background-color: #ebe8f8; /* todo: find variable */
     }
 }
